--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@nestjs/swagger": "^6.2.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -14,10 +15,11 @@
     "date-fns": "^2.0.0-alpha.27",
     "material-ui-pickers": "^2.2.4",
     "react": "^16.8.6",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.1",
+    "swagger-ui-express": "^4.6.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
